fix - resolvi o problema do overflow do display não ir para a direita automaticamente.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     border: 0.4px solid black;
     overflow-y: hidden;
     overflow-x: auto;
-    white-space: nowrap;
     text-align: right;
     width: 242;
     height: 38;
